references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/RequirementSubject_Invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:16e9c2af6748ac4f5992bb7a6d5515c314cc6ee366a258b7a0933e4d87a64cc9
size 2717
